Fixes for alignment (made some classes overflow visible and changed some classes to vertical-align:middle instead of baseline

--- a/static/crudl-ui/scss/base/_reset.scss
+++ b/static/crudl-ui/scss/base/_reset.scss
@@ -30,7 +30,7 @@ time, mark, audio, video {
     border:0;
     outline:0;
     font-size:100%;
-    vertical-align:baseline;
+    vertical-align:middle;
     background:transparent;
 }
 
