--- a/static/crudl-ui/scss/components/forms/_forms.scss
+++ b/static/crudl-ui/scss/components/forms/_forms.scss
@@ -41,7 +41,7 @@
             max-width: 400px;
         }
         &.field-size-x-small {
-            max-width: 100px;
+            max-width: 130px;
         }
     }
 }
